syntax = "proto3";
package publicPb.v1;
import "google/protobuf/empty.proto";
import "api/qvbilam/page/v1/page.proto";
option go_package="user/api/qvbilam/public/v1;publicV1";

message VideoResponse {
  int64 id = 1;
  int64 userId = 2;
  string businessId = 3;
  string url = 4;
  int64 size = 5;
  int64 duration = 6;
  string status = 7;
  string contentType = 8;
  string extra = 9;
  string createdAt = 10;
  string channel = 11;
}

message VideosResponse {
  int64 total = 1;
  repeated VideosResponse videos = 2;
}

message UpdateVideoRequest {
  int64 id = 1;
  int64 userId = 2;
  string businessId = 3;
  string url = 4;
  int64 size = 5;
  int64 duration = 6;
  string status = 7;
  string contentType = 8;
  string extra = 9;
  string sha1 = 10;
  string channel = 11;
}

message GetVideoRequest {
  int64 id = 1;
  string businessId = 2;
  string fileSha1 = 3;
}

message SearchVideoRequest{
  repeated int64 id = 1;
  repeated int64 userId = 2;
  repeated string businessId = 3;
  string fileSha1 = 4;
  pagePb.v1.PageRequest page = 5;
}

message ExistsVideoResponse {
  bool isExists = 1;
  VideoResponse video = 2;
}

service Video {
  rpc Create (UpdateVideoRequest) returns (VideoResponse);
  rpc Update (UpdateVideoRequest) returns (google.protobuf.Empty);
  rpc Delete (UpdateVideoRequest) returns (google.protobuf.Empty);
  rpc Get (SearchVideoRequest) returns (VideosResponse);
  rpc GetDetail (GetVideoRequest) returns (VideoResponse);
  rpc Exists(GetVideoRequest) returns (ExistsVideoResponse);
}